--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700&display=swap");
 body {
   background: #1d1d1d;
+  max-width: 100vw;
+  overflow-x: hidden;
+  font-family: "Sora", sans-serif;
 }
 @tailwind base;
 @tailwind components;
